[workspace]
resolver = "2"

[package]
name = "orgize-wasm"
publish = false
version = "0.10.0-alpha.7"
authors = ["PoiScript <poiscript@gmail.com>"]
repository = "https://github.com/tao3k/orgize-wasm"
edition = "2024"
license = "MIT"
description = "WebAssembly bindings for the orgize Org parser."

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "unit"
path = "tests/unit/lib.rs"

[dependencies]
orgize = { path = ".." }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.120"

[build-dependencies]
orgize-wasm-build-support = { path = "build-support" }
rust-lang-project-harness = { git = "https://github.com/tao3k/rust-lang-project-harness", rev = "acf9295ef9ef03caeb7ffa85c5e0b2389abe7d67" }
